The new changes is updated

--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -38,7 +34,8 @@
         <section class="hero__section">
             <header>
                 <nav class = "navbar">
-                    <a href="#">Get The App</a>
+                    <a href="#">
+                        <i class="fa-solid fa-mobile-screen-button"></i>Get The App</a>
                     <div class ="navbar__menu_container">
                         <a href="#" class ="link">Investor Relations</a>
                         <a href="#" class ="link">Add restaurant</a>
@@ -59,7 +56,8 @@
                     Discover the best food &drinks in Chennai
                 </h1>
                 <div class="hero__section__input_container">
-                    <input class="input__container_location" type="text" placeholder="Chennai">
+                    <div class="hero__section_locicon"><i class="fa-solid fa-location-dot"></i>
+                    <input class="input__container_location" type="text" placeholder="Chennai"></div>
                     <input class="input__container_search" type="text" placeholder="Search for restaurant, cuisine or a dish">
                 </div>
 
